Optimized imports